modif responsive navbar + page userlist

--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
 
 <body>
   <!-- Nav -->
-  <nav class="navbar navbar-expand-lg navbar-light justify-content-between fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light justify-content-between fixed-top stroke">
     <div class="order-lg-1">
       <button class="navbar-toggler" type="button" data-trigger="#menu">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="navbar-collapse left" id="menu">
         <div class="offcanvas-header mt-3">
-          <button class="btn btn-outline-danger btn-close float-right"> &times Close </button>
+          <button class="btn btn-outline-danger btn-close float-right">&times</button>
         </div>
-        <ul class="navbar-nav">
-          <li class="nav-item active"> <a class="nav-link" href="user_list.html"> Idealiseurs </a> </li>
+        <ul class="navbar-nav nav_left">
+          <li class="nav-item"> <a class="nav-link" href="user_list.html"> Idealiseurs </a> </li>
           <li class="nav-item"><a class="nav-link" href="#"> Projets</a></li>
         </ul>
       </div>
@@ -54,11 +54,11 @@
       <div class="navbar-collapse right" id="log">
 
         <div class="offcanvas-header mt-3">
-          <button class="btn btn-outline-danger btn-close float-right"> &times Close </button>
+          <button class="btn btn-outline-danger btn-close float-right">&times</button>
         </div>
 
-        <ul class="navbar-nav ">
-          <li class="nav-item active "> <a class="nav-link button" href="#popup"> Se connecter </a> </li>
+        <ul class="navbar-nav nav_right">
+          <li class="nav-item"> <a class="nav-link button" href="#popup"> Se connecter </a> </li>
           <li class="nav-item"><a class="nav-link" href="#"> S'inscrire</a></li>
         </ul>
       </div> <!-- navbar-collapse.// -->
@@ -207,7 +207,6 @@
 
   </section>
   <!-- modal signin -->
-  <div class="container2">
     <div class="popup" id="popup">
       <div class="popup-inner">
         <div class="popup__photo">
@@ -237,10 +236,9 @@
         <a class="popup__close" href="#">X</a>
       </div>
     </div>
-  </div>
 
   <!-- footer -->
-  <footer class="container d-flex justify-content-between">
+  <footer class="container d-flex justify-content-between pt-3">
     <ul class="footer">
       <li>Nous contacter</li>
       <li>Qui sommes nous ?</li>
