--- a/user_list.html
+++ b/user_list.html
@@ -12,21 +12,22 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css"
     integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
   <link rel="stylesheet" href="/html-css-js/css/style.css">
+  <link rel="stylesheet" href="/html-css-js/css/index.css">
   <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light justify-content-between fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light justify-content-between fixed-top stroke">
     <div class="order-lg-1">
       <button class="navbar-toggler" type="button" data-trigger="#menu">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="navbar-collapse left" id="menu">
         <div class="offcanvas-header mt-3">
-          <button class="btn btn-outline-danger btn-close float-right"> &times Close </button>
+          <button class="btn btn-outline-danger btn-close float-right">&times</button>
         </div>
-        <ul class="navbar-nav">
-          <li class="nav-item active"> <a class="nav-link" href="index.html"> Homepage </a> </li>
+        <ul class="navbar-nav nav_left">
+          <li class="nav-item"> <a class="nav-link" href="index.html"> Homepage </a> </li>
           <li class="nav-item"><a class="nav-link" href="#"> Projets</a></li>
         </ul>
       </div>
@@ -44,11 +45,11 @@
       <div class="navbar-collapse right" id="log">
 
         <div class="offcanvas-header mt-3">
-          <button class="btn btn-outline-danger btn-close float-right"> &times Close </button>
+          <button class="btn btn-outline-danger btn-close float-right">&times</button>
         </div>
 
-        <ul class="navbar-nav ">
-          <li class="nav-item active"> <a class="nav-link" href="#"> Se connecter </a> </li>
+        <ul class="navbar-nav nav_right">
+          <li class="nav-item"> <a class="nav-link" href="#"> Se connecter </a> </li>
           <li class="nav-item"><a class="nav-link" href="#"> S'inscrire</a></li>
         </ul>
       </div> <!-- navbar-collapse.// -->
@@ -75,7 +76,7 @@
     </div>
     <div class="user_container">
       <div class="user_list">
-        <div class="card mr-5 mb-4" style="width: 19rem;">
+        <div class="card ml-3 mb-4" style="width: 19rem;">
           <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -84,45 +85,7 @@
 
           </div>
         </div>
-        <div class="card mr-5 mb-4" style="width: 19rem;">
-
-          <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-
-          </div>
-        </div>
-        <div class="card mr-5 mb-4" style="width: 19rem;">
-          <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-
-          </div>
-        </div>
-        <div class="card mr-5 mb-4" style="width: 19rem;">
-          <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-
-          </div>
-        </div>
-
-        <div class="card mr-5 mb-4" style="width: 19rem;">
-          <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-
-          </div>
-        </div>
-        <div class="card mr-5 mb-4" style="width: 19rem;">
+        <div class="card ml-3 mb-4" style="width: 19rem;">
 
           <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
           <div class="card-body">
@@ -132,7 +95,7 @@
 
           </div>
         </div>
-        <div class="card mr-5 mb-4" style="width: 19rem;">
+        <div class="card ml-3 mb-4" style="width: 19rem;">
           <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -141,7 +104,45 @@
 
           </div>
         </div>
-        <div class="card mr-5 mb-4" style="width: 19rem;">
+        <div class="card ml-3 mb-4" style="width: 19rem;">
+          <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+
+          </div>
+        </div>
+
+        <div class="card ml-3 mb-4" style="width: 19rem;">
+          <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+
+          </div>
+        </div>
+        <div class="card ml-3 mb-4" style="width: 19rem;">
+
+          <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+
+          </div>
+        </div>
+        <div class="card ml-3 mb-4" style="width: 19rem;">
+          <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+
+          </div>
+        </div>
+        <div class="card ml-3 mb-4" style="width: 19rem;">
           <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
@@ -153,7 +154,37 @@
       </div>
     </div>
   </div>
-  
+
+  <div class="popup" id="popup">
+    <div class="popup-inner">
+      <div class="popup__photo">
+        <img
+          src="https://images.unsplash.com/photo-1515224526905-51c7d77c7bb8?ixlib=rb-0.3.5&s=9980646201037d28700d826b1bd096c4&auto=format&fit=crop&w=700&q=80"
+          alt="">
+      </div>
+      <div class="popup__text">
+
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+            placeholder="Enter email">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        </div>
+        <div class="form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+      <a class="popup__close" href="#">X</a>
+    </div>
+  </div>
+
   <footer class="container d-flex justify-content-between">
     <ul class="footer">
       <li>Nous contacter</li>
