modif modal login

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
               <blockquote class="card-blockquote">
                 <div id="chatbot">
                   <div class="fakechatbot-message perso_1" data-pause="1000"><strong><i class="fa fa-user"></i>
-                      User:</strong> Hello!</div>
-                  <div class="fakechatbot-message  perso_2" data-pause="2000"><strong><i class="fa fa-android"></i>
-                      Bot:</strong> Good morning! How can I help you?</div>
+                      AdrienM:</strong> Hey salut, j'ai vu que tu avais besoin d'un développeur React pour ton projet, c'est toujours le cas?</div>
+                  <div class="fakechatbot-message  perso_2" data-pause="2000"><strong><i class="fa fa-user"></i>
+                      Samus:</strong> Salut Adrien, oui c'est toujours le cas ! Partant pour rejoindre l'équipe?</div>
                   <div class="fakechatbot-message  perso_1" data-pause="1500"><strong><i class="fa fa-user"></i>
                       User:</strong> Do you want to join us?</div>
                   <div class="fakechatbot-message perso_2" data-pause="1000"><strong><i class="fa fa-android"></i>
