--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Check me out</label>
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn_modal btn-primary">Submit</button>
           </form>
         </div>
         <a class="popup__close" href="#">X</a>
