--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
 <script src="./html-css-js/js/fakechatbot.js"></script>
 <script src="./html-css-js/js/navbar.js"></script>
 <script type="text/javascript" src="./html-css-js/tiny-slider/dist/min/tiny-slider.js"></script>
+<script type="text/javascript" src="./html-css-js/js/search.js"></script>
 
 <script type="text/javascript">
   $(document).ready(function () {
