add project list, rework filter system (js)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <ul class="navbar-nav nav_left">
           <li class="nav-item"> <a class="nav-link" href="user_list.html"> Idealiseurs </a> </li>
-          <li class="nav-item"><a class="nav-link" href="#"> Projets</a></li>
+          <li class="nav-item"><a class="nav-link" href="project_list.html"> Projets</a></li>
         </ul>
       </div>
     </div>
