--- a/project_list.html
+++ b/project_list.html
@@ -17,44 +17,45 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light justify-content-between fixed-top stroke">
-        <div class="order-lg-1">
-            <button class="navbar-toggler" type="button" data-trigger="#menu">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse left" id="menu">
-                <div class="offcanvas-header mt-3">
-                    <button class="btn btn-outline-danger btn-close float-right">&times</button>
-                </div>
-                <ul class="navbar-nav nav_left">
-                    <li class="nav-item"> <a class="nav-link" href="index.html"> Homepage </a> </li>
-                    <li class="nav-item"><a class="nav-link" href="user_list.html"> Idéaliseur</a></li>
-                </ul>
-            </div>
+    <!-- Nav -->
+  <nav class="navbar navbar-expand-lg navbar-light justify-content-between fixed-top stroke">
+    <div class="order-lg-1">
+      <button class="navbar-toggler" type="button" data-trigger="#menu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse left" id="menu">
+        <div class="offcanvas-header mt-3">
+          <button class="btn btn-outline-danger btn-close float-right">&times</button>
         </div>
-        <!-- navbar-collapse menu.// -->
-        <div class="order-lg-2">
+        <ul class="navbar-nav nav_left">
+          <li class="nav-item"> <a class="nav-link" href="user_list.html"> Idealiseurs </a> </li>
+          <li class="nav-item"><a class="nav-link" href="project_list.html"> Projets</a></li>
+        </ul>
+      </div>
+    </div>
+    <!-- navbar-collapse menu.// -->
+    <div class="order-lg-2">
 
-            <a class="navbar-brand" href="#"><img id="logo" src="../placeholder.com-logo1.png" alt=""></a>
+      <a class="navbar-brand" href="#"><img id="logo" src="html-css-js/placeholder.com-logo1.png" alt=""></a>
+    </div>
+
+    <div class="order-lg-3">
+      <button class="navbar-toggler" type="button" data-trigger="#log">
+        <span class="fa fa-user-circle-o" aria-hidden="true"></span>
+      </button>
+      <div class="navbar-collapse right" id="log">
+
+        <div class="offcanvas-header mt-3">
+          <button class="btn btn-outline-danger btn-close float-right">&times</button>
         </div>
 
-        <div class="order-lg-3">
-            <button class="navbar-toggler" type="button" data-trigger="#log">
-                <span class="fa fa-user-circle-o" aria-hidden="true"></span>
-            </button>
-            <div class="navbar-collapse right" id="log">
-
-                <div class="offcanvas-header mt-3">
-                    <button class="btn btn-outline-danger btn-close float-right">&times</button>
-                </div>
-
-                <ul class="navbar-nav nav_right">
-                    <li class="nav-item"> <a class="nav-link" href="#"> Se connecter </a> </li>
-                    <li class="nav-item"><a class="nav-link" href="#"> S'inscrire</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+        <ul class="navbar-nav nav_right">
+          <li class="nav-item"> <a class="nav-link button" href="#popup"> Se connecter </a> </li>
+          <li class="nav-item"><a class="nav-link" href="#"> S'inscrire</a></li>
+        </ul>
+      </div> <!-- navbar-collapse.// -->
+    </div>
+  </nav>
 
     <div class="top_div">
 
