--- a/user_list.html
+++ b/user_list.html
@@ -17,7 +17,8 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light justify-content-between fixed-top stroke">
+   <!-- Nav -->
+   <nav class="navbar navbar-expand-lg navbar-light justify-content-between fixed-top stroke">
     <div class="order-lg-1">
       <button class="navbar-toggler" type="button" data-trigger="#menu">
         <span class="navbar-toggler-icon"></span>
@@ -27,7 +28,7 @@
           <button class="btn btn-outline-danger btn-close float-right">&times</button>
         </div>
         <ul class="navbar-nav nav_left">
-          <li class="nav-item"> <a class="nav-link" href="index.html"> Homepage </a> </li>
+          <li class="nav-item"> <a class="nav-link" href="user_list.html"> Idealiseurs </a> </li>
           <li class="nav-item"><a class="nav-link" href="project_list.html"> Projets</a></li>
         </ul>
       </div>
@@ -35,7 +36,7 @@
     <!-- navbar-collapse menu.// -->
     <div class="order-lg-2">
 
-      <a class="navbar-brand" href="#"><img id="logo" src="../placeholder.com-logo1.png" alt=""></a>
+      <a class="navbar-brand" href="#"><img id="logo" src="html-css-js/placeholder.com-logo1.png" alt=""></a>
     </div>
 
     <div class="order-lg-3">
@@ -49,10 +50,10 @@
         </div>
 
         <ul class="navbar-nav nav_right">
-          <li class="nav-item"> <a class="nav-link" href="#"> Se connecter </a> </li>
+          <li class="nav-item"> <a class="nav-link button" href="#popup"> Se connecter </a> </li>
           <li class="nav-item"><a class="nav-link" href="#"> S'inscrire</a></li>
         </ul>
-      </div>
+      </div> <!-- navbar-collapse.// -->
     </div>
   </nav>
 
