modif user profil with gio

--- a/user.html
+++ b/user.html
@@ -64,11 +64,7 @@
 
     <div class="container container-fluid profil" style="background-color: aliceblue; color: black;">
         <div class="row profil_info">
-            <div class="col-4 row justify-content-md-center">
-                <div class="col profil_info_item">
-                    <div>amis</div>
-                    <div>12</div>
-                </div>
+            <div class="col-3 row justify-content-md-center">
                 <div class="col profil_info_item">
                     <div>Projets</div>
                     <div>1</div>
@@ -78,15 +74,14 @@
                     <div>12</div>
                 </div>
             </div>
-            <div class="col-5">
+            <div class="col">
                 2 of 3 (wider)
             </div>
-            <div class="profil_contact col-3 row justify-content-md-center">
+            <div class="col-3 profil_contact  row justify-content-md-center">
                 <div class="col"><i class="fa fa-user-plus" aria-hidden="true"></i></div>
                 <div class="col"><button type="button" class="btn btn-primary btn-sm">Add</button></div>
             </div>
         </div>
-
     </div>
 
     <!-- modal signin -->
