--- a/user.html
+++ b/user.html
@@ -64,7 +64,7 @@
 
     <div class="container container-fluid profil" style="background-color: aliceblue; color: black;">
         <div class="row profil_info">
-            <div class="col-3 row justify-content-md-center">
+            <div class="col-4 row justify-content-md-center">
                 <div class="col profil_info_item">
                     <div>Projets</div>
                     <div>1</div>
@@ -74,12 +74,26 @@
                     <div>12</div>
                 </div>
             </div>
-            <div class="col">
-                2 of 3 (wider)
+            <div class="col-4  mx-auto">
+                <img class="user_avatar" src="images/dd.jpg">
             </div>
-            <div class="col-3 profil_contact  row justify-content-md-center">
+            <div class="col-4 profil_contact justify-content-end row justify-content-md-center">
                 <div class="col"><i class="fa fa-user-plus" aria-hidden="true"></i></div>
                 <div class="col"><button type="button" class="btn btn-primary btn-sm">Add</button></div>
+            </div>
+        </div>
+        <div>
+            <div class="col-md-9 mx-auto col-12 text-center">
+                <div class="d-flex justify-content-md-center">
+                    <h2>UnIdiotEncore</h2>
+                    <span class="pl-3">Disponible</span>
+                </div>
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum error ab cupiditate veritatis dolor, perspiciatis tenetur nihil odit vitae aperiam fuga! Ab optio alias enim adipisci. Omnis praesentium illo nisi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt molestias tenetur explicabo voluptatem unde consequatur fugiat necessitatibus labore, fugit ratione harum soluta vitae distinctio dolorum perferendis, quia illum cupiditate! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, consequuntur. Sed eveniet nihil rem ex alias, quas a illum laborum repudiandae id, veniam eos deleniti numquam ullam. Quis, laudantium obcaecati. </p>
+                </div>
+                <div>
+                    <h3>Technos</h3>
+                </div>
             </div>
         </div>
     </div>
