modif size image + modif user_items

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div id="users">
 
       <figure>
-        <img class="scaled users  img-rounded" src="https://via.placeholder.com/300/0000FF/808080" alt="Eiffel tower">
+        <img class="scaled users_pic  img-rounded" src="https://via.placeholder.com/300/0000FF/808080" alt="Eiffel tower">
         <figcaption>
           <h6>Name 1</h6>
           <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, iste.</p>
@@ -125,28 +125,28 @@
       </figure>
 
       <figure>
-        <img class="scaled users img-rounded" src="./html-css-js/alan-bean.jpg" alt="username :">
+        <img class="scaled users_pic img-rounded" src="./html-css-js/alan-bean.jpg" alt="username :">
         <figcaption>
           <h6>Name 2</h6>
           <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, iste.</p>
         </figcaption>
       </figure>
       <figure>
-        <img class="scaled users img-rounded" src=" https://via.placeholder.com/300/FF0000/FFFFFF" alt="username :">
+        <img class="scaled users_pic img-rounded" src=" https://via.placeholder.com/300/FF0000/FFFFFF" alt="username :">
         <figcaption>
           <h6>Name 3</h6>
           <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, iste.</p>
         </figcaption>
       </figure>
       <figure>
-        <img class="scaled users img-rounded" src=" https://via.placeholder.com/300/FFFF00/000000" alt="username :">
+        <img class="scaled users_pic img-rounded" src=" https://via.placeholder.com/300/FFFF00/000000" alt="username :">
         <figcaption>
           <h6>Name 4</h6>
           <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, iste.</p>
         </figcaption>
       </figure>
       <figure>
-        <img class="scaled users img-rounded" src=" https://via.placeholder.com/300/FFFF00/000000" alt="username :">
+        <img class="scaled users_pic img-rounded" src=" https://via.placeholder.com/300/FFFF00/000000" alt="username :">
         <figcaption>
           <h6>Name 5</h6>
           <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, iste.</p>
@@ -164,7 +164,7 @@
     <div id="projects">
 
       <figure>
-        <img class="scaled projects" src="https://via.placeholder.com/300/0000FF/808080" alt="Eiffel tower">
+        <img class="scaled projects_pic" src="https://via.placeholder.com/300/0000FF/808080" alt="Eiffel tower">
         <figcaption>
           <h6>Name 1</h6>
           <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, iste.</p>
@@ -172,21 +172,21 @@
       </figure>
 
       <figure>
-        <img class="scaled projects" src="./html-css-js/alan-bean.jpg" alt="username :">
+        <img class="scaled projects_pic" src="./html-css-js/alan-bean.jpg" alt="username :">
         <figcaption>
           <h6>Name 2</h6>
           <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, iste.</p>
         </figcaption>
       </figure>
       <figure>
-        <img class="scaled projects" src=" https://via.placeholder.com/300/FF0000/FFFFFF" alt="username :">
+        <img class="scaled projects_pic" src=" https://via.placeholder.com/300/FF0000/FFFFFF" alt="username :">
         <figcaption>
           <h6>Name 3</h6>
           <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, iste.</p>
         </figcaption>
       </figure>
       <figure>
-        <img class="scaled projects" src=" https://via.placeholder.com/300/FFFF00/000000" alt="username :">
+        <img class="scaled projects_pic" src=" https://via.placeholder.com/300/FFFF00/000000" alt="username :">
         <figcaption>
           <h6>Name 4</h6>
           <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, iste.</p>
