--- a/user_test2.html
+++ b/user_test2.html
@@ -62,49 +62,53 @@
     </nav>
 
     <div class="container user_page">
-        <div class="col-12 mx-auto pt-4 pb-3 user_background">
+        <div class="col-12 mx-auto pb-3 user_background">
             <div class="d-flex">
                 <div class="mx-auto">
                     <div class="mx-auto d-flex position_div">
                         <img class="user_avatar" src="./images/kira.png">
-                        <div class="position_available">
-                            <span>Dispo</span>
+                        <div class="position_available dispo">
+                            <!-- <div class="position_available indispo"> -->
+                            <span></span>
                         </div>
                     </div>
                     <div class="col-12 mx-auto text-center pt-2">
                         <h3>UnIdiotEncore</h3>
-                        <p class="pt-1">Développeur, backend</p>
+                        <p>Développeur, backend</p>
                     </div>
                 </div>
             </div>
 
-            <div class="d-flex col-md-8 col-12 mx-auto text-center">
-                <div class="col-4 mx-auto item_profil">
+            <div class="d-flex col-md-8 col-12 mx-auto text-center user_info">
+                
+
+                <div class="col-3 mx-auto item_profil send_message">
+                    <div>Contacter</div>
+                    <div><a href=""><i class="fa fa-paper-plane" aria-hidden="true"></i></a></div>
+                </div>
+                <div class="col-6 mx-auto item_profil">
                     <div>Projets finis</div>
-                    <div>4</div>
+                    <div>4</div> <!-- Projet total/ projet fini||| -->      
                 </div>
-
-                <div class="col-4 mx-auto item_profil">
-                    <div>Amis</div>
-                    <div>8</div>
-                </div>
-                <div class="col-4 d-flex mx-auto item_profil">
-                    <div class="mx-auto">
-                        <div>
-                            <i class="fa fa-user-plus" aria-hidden="true"></i>
-                        </div>
-                        <div>
-                            <button>Ajouter</button>
-                        </div>
-                    </div>
-
+                <div class="col-3  item_profil add_friend">
+                        <div>Ajouter</div>
+                        <div><a href=""><i class="fa fa-user-plus" aria-hidden="true"></i></a></div>
                 </div>
             </div>
+
+        </div>
+        <div class="col-12 mx-auto pb-3 ">
+
         </div>
     </div>
     <hr>
     <div>
-
+        <div class="baloon">
+            <p>Projets réalisé:</p>
+            <p>5</p>
+        </div>
+        <div class="baloon baloon_big"></div>
+        <div class="baloon"></div>
     </div>
     </div>
     <!-- modal signin -->
