add circle for project, fav and friend + resizing user avatar

--- a/user_list.html
+++ b/user_list.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-   <!-- Nav -->
-   <nav class="navbar navbar-expand-lg navbar-light justify-content-between fixed-top stroke">
+  <!-- Nav -->
+  <nav class="navbar navbar-expand-lg navbar-light justify-content-between fixed-top stroke">
     <div class="order-lg-1">
       <button class="navbar-toggler" type="button" data-trigger="#menu">
         <span class="navbar-toggler-icon"></span>
@@ -36,7 +36,7 @@
     <!-- navbar-collapse menu.// -->
     <div class="order-lg-2">
 
-      <a class="navbar-brand" href="#"><img id="logo" src="html-css-js/placeholder.com-logo1.png" alt=""></a>
+      <a class="navbar-brand" href="index.html"><img id="logo" src="html-css-js/placeholder.com-logo1.png" alt=""></a>
     </div>
 
     <div class="order-lg-3">
@@ -109,17 +109,18 @@
     </aside>
     <main class="user_container">
       <section class="user_list">
-        <div class="card ml-3 mb-4 user php" style="width: 19rem;">
-          <div class="mx-auto">
-            <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
+        <a href="user.html">
+          <div class="card ml-3 mb-4 user php" style="width: 19rem;">
+            <div class="mx-auto">
+              <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">PHP example text to build on the card title and make up the bulk of the card's
+                content.</p>
+            </div>
           </div>
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">PHP example text to build on the card title and make up the bulk of the card's
-              content.</p>
-          </div>
-        </div>
-
+        </a>
         <div class="card ml-3 mb-4 user php" style="width: 19rem;">
           <div class="mx-auto">
             <img class="users img-rounded mx-auto mt-2" src="images/dd.jpg" alt="Card image cap">
