--- a/project_list.html
+++ b/project_list.html
@@ -36,7 +36,7 @@
     <!-- navbar-collapse menu.// -->
     <div class="order-lg-2">
 
-      <a class="navbar-brand" href="#"><img id="logo" src="html-css-js/placeholder.com-logo1.png" alt=""></a>
+      <a class="navbar-brand" href="index.html"><img id="logo" src="html-css-js/placeholder.com-logo1.png" alt=""></a>
     </div>
 
     <div class="order-lg-3">
