--- a/user.html
+++ b/user.html
@@ -61,43 +61,59 @@
         </div>
     </nav>
 
+    <div class="container user_page">
+        <div class="col-12 mx-auto pb-3 user_background">
+            <div class="d-flex">
+                <div class="mx-auto">
+                    <div class="mx-auto d-flex position_div">
+                        <img class="user_avatar" src="./images/kira.png">
+                        <div class="position_available dispo">
+                            <!-- <div class="position_available indispo"> -->
+                            <span></span>
+                        </div>
+                    </div>
+                    <div class="col-12 mx-auto text-center pt-2">
+                        <h3>UnIdiotEncore</h3>
+                        <p>Développeur, backend</p>
+                    </div>
+                </div>
+            </div>
 
-    <div class="container container-fluid profil" style="background-color: aliceblue; color: black;">
-        <div class="row profil_info">
-            <div class="col-4 row justify-content-md-center">
-                <div class="col profil_info_item">
-                    <div>Projets</div>
-                    <div>1</div>
+            <div class="d-flex col-md-8 col-12 mx-auto text-center user_info">
+                
+
+                <div class="col-3 mx-auto item_profil send_message">
+                    <div>Contacter</div>
+                    <div><a href=""><i class="fa fa-paper-plane" aria-hidden="true"></i></a></div>
                 </div>
-                <div class="col profil_info_item">
-                    <div>Favoris</div> 
-                    <div>12</div>
+                <div class="col-6 mx-auto item_profil">
+                    <div>Projets finis</div>
+                    <div>4</div> <!-- Projet total/ projet fini||| -->      
+                </div>
+                <div class="col-3  item_profil add_friend">
+                        <div>Ajouter</div>
+                        <div><a href=""><i class="fa fa-user-plus" aria-hidden="true"></i></a></div>
                 </div>
             </div>
-            <div class="col-4  mx-auto">
-                <img class="user_avatar" src="images/dd.jpg">
-            </div>
-            <div class="col-4 profil_contact justify-content-end row justify-content-md-center">
-                <div class="col"><i class="fa fa-user-plus" aria-hidden="true"></i></div>
-                <div class="col"><button type="button" class="btn btn-primary btn-sm">Add</button></div>
-            </div>
+
         </div>
-        <div>
-            <div class="col-md-9 mx-auto col-12 text-center">
-                <div class="d-flex justify-content-md-center">
-                    <h2>UnIdiotEncore</h2>
-                    <span class="pl-3">Disponible</span>
-                </div>
-                <div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum error ab cupiditate veritatis dolor, perspiciatis tenetur nihil odit vitae aperiam fuga! Ab optio alias enim adipisci. Omnis praesentium illo nisi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit incidunt molestias tenetur explicabo voluptatem unde consequatur fugiat necessitatibus labore, fugit ratione harum soluta vitae distinctio dolorum perferendis, quia illum cupiditate! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, consequuntur. Sed eveniet nihil rem ex alias, quas a illum laborum repudiandae id, veniam eos deleniti numquam ullam. Quis, laudantium obcaecati. </p>
-                </div>
-                <div>
-                    <h3>Technos</h3>
-                </div>
-            </div>
+        <div class="col-12 mx-auto pb-3 ">
+
         </div>
     </div>
-
+    <div>
+        <div class="d-flex justify-content-around w-100 text-center">
+            <div class="baloon mt-2 d-flex"> 
+                <p class="align-self-center mx-auto">Idéaliseurs <br>5</p>
+            </div>
+            <div class="baloon mt-5 d-flex">
+                <p class=" align-self-center mx-auto">Amis <br>5</p>
+            </div>
+        </div>
+        <div class="baloon baloon_big mt-2 d-flex">
+            <p class="align-self-center mx-auto">Projet réalisé</p>
+        </div>
+    </div>
     <!-- modal signin -->
     <div class="popup" id="popup">
         <div class="popup-inner">
